# systemd-query-rest

./: Cargo.toml  install.sh
deploy/: systemd-query-rest.service
src/: main.rs
